--- a/frontend/src/pages/productEdit.css
+++ b/frontend/src/pages/productEdit.css
@@ -112,3 +112,13 @@
 	background-color: white;
 	opacity: 0.5;
 }
+
+.cover-1 {
+	position: absolute;
+	height: 100%;
+	background-color: white;
+	top: 0;
+	left: 0;
+	opacity: 0.5;
+	width: 100%;
+}
