--- a/frontend/src/pages/ProductList.css
+++ b/frontend/src/pages/ProductList.css
@@ -126,3 +126,13 @@
 		overflow: hidden;
 	}
 }
+
+.cover-1 {
+	position: absolute;
+	height: 100%;
+	background-color: white;
+	top: 0;
+	left: 0;
+	opacity: 0.5;
+	width: 100%;
+}
