--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -57,3 +57,13 @@
 .Profile-update-button {
 	max-width: 13rem;
 }
+
+.cover {
+	position: absolute;
+	width: 77%;
+	height: 100%;
+	background-color: white;
+	top: 0;
+	left: 0;
+	opacity: 0.5;
+}
